--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,14 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
 
+	// SLF4J API
+	implementation 'org.slf4j:slf4j-api:1.7.32'
+
+	// Logback 클래식 로깅 구현체
+	implementation 'ch.qos.logback:logback-classic:1.2.6'
+	implementation 'ch.qos.logback:logback-core:1.2.6'
+
+
 }
 
 tasks.named('test') {
