허용경로 *, allowedUrl 확인

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,8 +20,8 @@ kakao:
   clientId: ${KAKAO_CLIENT_ID}
   redirectUri: ${KAKAO_REDIRECT_URL}
 
-cors:
-  allowedOrigin: ${DEFAULT_URL}
+#cors:
+#  allowedOrigin: ${DEFAULT_URL}
 
 
 server:
