--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -15,3 +15,10 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+kakao:
+  clientId: ${KAKAO_CLIENT_ID}
+  redirectUri: ${KAKAO_REDIRECT_URI}
+
+cors:
+  allowedOrigin: ${CORS_ALLOWED_ORIGIN}
