--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -13,8 +13,8 @@ spring:
         show_sql: true
         format_sql: true
     redis:
-      host: localhost
-      port: 6379
+      host: ${SPRING_REDIS_HOST}
+      port: ${SPRING_REDIS_PORT}
 
 kakao:
   clientId: ${KAKAO_CLIENT_ID}
